--- a/index.html
+++ b/index.html
@@ -123,9 +123,11 @@
       >
         <div class="w-full md:w-1/2 lg:w-[300px] p-4">
           <div
-            class="s p-4 mb-4 bg-cover bg-center"
+            class=" p-8 mb-4 bg-center"
             style="
               background-image: url('assets/Highlights/Green\ Circle\ \(Large\).png');
+              background-repeat: no-repeat;
+              background-size: cover;
             "
           >
             <p class="text-gray-800 font-medium text-lg">Right Text Card</p>
@@ -145,7 +147,7 @@
             </p>
           </div>
         </div>
-        <div class="w-full md:w-1/2 lg:w-[600px] p-4">
+        <div class="w-full  md:w-1/2 lg:w-[600px] p-4">
           <img
             src="assets/Big Graphics/Plant_02.png"
             alt="Tree Image"
@@ -162,11 +164,13 @@
             </p>
           </div>
           <div
-            class="p-4 mb-4 bg-cover bg-center"
-            style="
-              background-image: url('assets/Highlights/Green\ Circle\ \(Large\).png');
-            "
-          >
+          class=" p-8 mb-4 bg-center"
+          style="
+            background-image: url('assets/Highlights/Green\ Circle\ \(Large\).png');
+            background-repeat: no-repeat;
+            background-size: cover;
+          "
+        >
             <p class="text-gray-800 font-medium text-lg">Right Text Card</p>
             <p class="text-gray-600 mt-2">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at
